syntax="proto3";
package gateway;
option go_package="./;service";

message UserModel{
    
    uint32 ID=1;
    string Username=2;
    int64 CreateAt=3;
    int64 UpdatedAt=4;
    int64 DeletedAt=5;
   
}

