syntax="proto3";
package services;
option go_package = "./microtask/;microtask";


message TaskModel{
    uint64 Id =1;
    uint64 Uid=2;
    string Title=3;
    string Content=4;
    int64 StartTime=5;
    int64 Status=7;
    string CreateTime=8;
    string UpdateTime=9;
}